samples/_failures_safe/1761256153_f8505a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8ac7216.c: In function ‘main’:
./samples/SAFE/__tmp_c8ac7216.c:157:5: error: expected expression at end of input
  157 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_c8ac7216.c:157:5: error: expected declaration or statement at end of input
